--- a/franske-course-information/modules/itc-2300/pages/lab-asterisk-introduction.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-asterisk-introduction.adoc
@@ -78,7 +78,7 @@ WARNING: If you are not continuing past this point be sure to safely shutdown yo
 . Install the sudo package with `*apt install sudo*`
 . Add your user to the sudo group with a command like `*adduser _YOURUSERNAMEHERE_ sudo`*
 . Install the *asterisk* and *tftpd-hpa* packages in a similar manner to how you installed sudo.
-. Download the chan-sccp plugin to your Debian system like `*wget xref:attachment$chan-sccp_4.3.4_amd64.deb[]*`
+. Download the chan-sccp plugin to your Debian system like `*wget xref:attachment$chan-sccp_4.3.4_amd64.deb[https://info.ihitc.net/franske-courses/current/itc-2300/_attachments/chan-sccp_4.3.4_amd64.deb]*`
 +
 --
 NOTE: To save time and reduce complexity in our lab I have built this packaged version of the chan-sccp-b plugin which works with our Debian systems and version of Asterisk. The actual plugin and normal installation instructions are at https://github.com/chan-sccp/chan-sccp
